fix cors issue / add new endpoints refreshtoken / logout
