# app/Http/Requests/Api/Auth/RefreshTokenRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Requests\Api\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class RefreshTokenRequest extends FormRequest
+{
+    public function authorize()
+    {
+        return true;
+    }
+
+    public function rules()
+    {
+        return [
+            'refreshToken'  => ['required', 'string', 'max:1000'],
+        ];
+    }
+}
